--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
         </div>
         <!-- CHAMPION DETAILS -->
-        <div id="Aatrox" class=" detail-container">
+        <div id="aatrox" class=" detail-container">
             <article class="segment introduction">
                 <img src="https://static.bigbrain.gg/assets/lol/riot_static/15.8.1/img/champion/Aatrox.png"
                     class="big-icon" alt="Aatrox">
@@ -221,5 +221,6 @@
 
 
 </body>
+<script src="script.js"></script>
 
 </html>
