--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>Use first Q to poke enemies in lane. If you do not use all 3 charges, your Q cooldown will
+                        become shorter.</li>
+                    <li>Trade during your passive windows. Your empowered auto gives you more damage and heals you.</li>
+                    <li>You excel in extended fights due to the sustain from your ultimate.</li>
                 </ul>
 
             </article>
@@ -388,10 +388,12 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>Don't fight him when he has his passive ready. His passive makes his next atack do bonus damage
-                        and heals him. If you see his sword glowing red, back off until he uses it on a minion.</li>
+                    <li>Don't trade with him when he has his passive ready. His passive makes his next atack do bonus
+                        damage
+                        and heals him.</li>
                     <li>Dodge his Qs. Don't move in straight lines. Most times, moving towards Aatrox when he does his
                         first Q will make him miss.</li>
+                    <li>If you get hit by his W, the quickest way out of the zone is sideways.</li>
                     <li>Anti-healing like grievous wounds is a must buy when facing Aatrox. Buy healing reduction early
                         like:
                         <ul>
@@ -434,10 +436,18 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Keep in mind of Ahri's ultimate cooldown, which starts when she uses it for the first time. Once
+                        she gets a few resets and spaces out her dashes, her ultimate might already be up in few dozen
+                        seconds.</li>
+                    <li>During the laning phase, if you have an important ability that you need to land, note that
+                        Ahri's W (with the three orbs around her) gives her bonus movement speed.</li>
+                    <li>Ahri receives an additional ult charge upon every kill, so if its possible to completely avoid
+                        skirmishing when she ults, do so.</li>
+                    <li>Ahri's damage early on heavily relies on landing her skillshots (Q and E). As the game
+                        progresses, do not underestimate her W damage, which takes no skill and is extremely mana
+                        friendly and spammable. </li>
+                    <li>Restricting Ahri's movement can be very limiting for her. An example is cageing her with
+                        Veigar's E.</li>
                 </ul>
             </article>
 
@@ -464,10 +474,21 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Ways to reveal Akali in her shroud (W):
+                        <ul>
+                            <li>Pink wards do not reveal Akali when she is in her shroud, but Oracle Lens does.</li>
+                            <li>Champions with reveals can also catch her out (Lee Sin's Q or Galio's E)</li>
+                            <li>Ignite also reveals enemies so you could apply it to her before she goes invisible
+                                again.</li>
+                        </ul>
+                    </li>
+                    <li>After Akali uses the first part of her ultimate, she can only recast it after 2.5 seconds have
+                        passed. As long as you see the first part go off, you will have enough time to prepare for the
+                        next part of her execution.</li>
+                    <li>Fight in open spaces (teamfights as well). Akali's shroud and mobility become much stronger in
+                        tight spaces.</li>
+                    <li>Akali's mobility allow her to easily dodge abilities. Your team should have some point and click
+                        hard CC to lock her down, followed by burst damage to quickly kill her.</li>
                 </ul>
             </article>
 
@@ -494,10 +515,15 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Respect his early burst. Akshan has great trading ability with his passive shield and double
+                        autos.
+                    </li>
+                    <li>Punish his cooldowns. His E and Q have quite long cooldowns early on. If he wastes them and
+                        misses, engage immediately.</li>
+                    <li>His Boomerang (Q) goes a further distance upon every enemy unit hit. So mind the minions and
+                        avoid standing behind wave.</li>
+                    <li>Akshan's ultimate gets blocked by minions, allies, jungle monsters, and towers.</li>
+                    <li>Don't give him free revive resets. Fight him first or deny him resets during skirmishes.</li>
                 </ul>
             </article>
 
@@ -524,10 +550,16 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Alistar's ultimate does not reduce the true damage, so items like Kraken Slayer can destroy him.
+                    </li>
+                    <li>Avoid standing between a wall and Alistar. If you do, he can headbutt (W) you into the wall
+                        first, then stagger the CC with his Pulverize (Q).</li>
+                    <li>Punish him when his cooldowns are down. Alistar is useless after W-Q combo.</li>
+                    <li>You can consider disengaging and waiting out his ultimate.</li>
+                    <li>Alistar is melee and has a kit that forces him to commit to a fight. Champions with good poke
+                        can give him a hard time by chunking him down before he can engage.</li>
+                    <li>Spread out during fights to not give him a penta CC.</li>
+                    <li>His headbutt (W) does not follow you when you flash away during its animation.</li>
                 </ul>
             </article>
 
@@ -554,10 +586,10 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Ambessa's cooldowns are extremely high early on so punish her after she does her combos.</li>
+                    <li>Ambessa's passive gives her empowered autos are abilities which refund energy. Don't let her
+                        stack multiple empowered hits.</li>
+                    <li>Respect her level 2, 3 and 6 powerspikes.</li>
                 </ul>
             </article>
 
@@ -584,10 +616,12 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Amumu' kit doesn't allow him to have many tricks up his sleeve (except flash Q or flash Ult).
+                    </li>
+                    <li>Dodging Amumu's Bandage Toss (Q) is the only thing you need to focus on (apart from his flash).
+                    </li>
+                    <li>Do not clump in fights and give him that penta CC.</li>
+                    <li>Basically, track his flash cooldowns.</li>
                 </ul>
             </article>
 
@@ -614,10 +648,12 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Anivia's Q is a major part of her combo. Dodging it removes a lot of kill pressure since getting
+                        chilled by her Q or Ultimate means more damage from frostbite (E).</li>
+                    <li>Remember about her passive Rebirth and don't get baited.</li>
+                    <li>Anivia has mana problems early on if she uses abilities too frequently.</li>
+                    <li>Do not clump in fights and give her a 5 man ultimate.</li>
+                    <li>Punish her in lane before she gets items.</li>
                 </ul>
             </article>
 
@@ -644,10 +680,10 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>People usually anticipate her stun when she is at 3 out of 4 stacks. Note that good Annie
+                        players can flash E, W then R you at 2 stacks to surprise you with the stun.</li>
+                    <li>Be cautious when face-checking bushes.</li>
+                    <li>Bait out Annie's flash so she can't flash stun your team.</li>
                 </ul>
             </article>
 
@@ -674,8 +710,8 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
+                    <li>Avoid Aphelios when he has green and white weapons. He usually wants to fight </li>
+                    <li>Destroy Aphelios' turret when you can, it does a lot of damage.</li>
                     <li>This is counter tip 3</li>
                     <li>This is counter tip 4</li>
                 </ul>
@@ -704,10 +740,10 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Ashe's W range is simply too far. It's better to stand behind minions rather than running away
+                        from it.</li>
+                    <li>Ashe excels in prolonged trades since she deals more damage when she can stack her Q and slows
+                        on you.</li>
                 </ul>
             </article>
 
@@ -736,10 +772,14 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Respect his level 1 trading capability.</li>
+                    <li>Champion with stuns can deny Sol's Starsurge (Q) during lane.</li>
+                    <li>Sol's Q gives him stardust stacks from enemy champions. Avoid giving him free stacks by just
+                        standing in his face.</li>
+                    <li>Do not stay in his Singularity (E) for too long, he gets a stardust stack for every second an
+                        enemy champion stands in it.</li>
+                    <li>If the game gets too late and the enemy team has good peeling capabilites, then the game will be
+                        extremely hard for you unless they throw.</li>
                 </ul>
             </article>
 
@@ -796,10 +836,7 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>You can block Azir's dash if you stand between him and the soldier he is dashing to.</li>
                 </ul>
             </article>
 
@@ -826,10 +863,9 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
-                    <li>This is counter tip 2</li>
-                    <li>This is counter tip 3</li>
-                    <li>This is counter tip 4</li>
+                    <li>Banshee's Veil isn't very good against Bard's stun. It has two procs, the first is
+                        the damage, the second is when it hits a second object or a wall.</li>
+                    <li>Punish his lack of damage in the early game.</li>
                 </ul>
             </article>
 
@@ -886,7 +922,8 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
+                    <li>Blitz's ultimate breaks all shields as well, so don't accidentally use your shields when he has
+                        it up.</li>
                     <li>This is counter tip 2</li>
                     <li>This is counter tip 3</li>
                     <li>This is counter tip 4</li>
@@ -916,7 +953,8 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
-                    <li>This is counter tip 1</li>
+                    <li>Brand's damage is mainly percent health, so MR helps more than HP when building against him.
+                    </li>
                     <li>This is counter tip 2</li>
                     <li>This is counter tip 3</li>
                     <li>This is counter tip 4</li>
@@ -1260,7 +1298,7 @@
             <article class="segment introduction">
                 <img src="https://static.bigbrain.gg/assets/lol/riot_static/15.8.1/img/champion/Aatrox.png"
                     class="big-icon" alt="Aatrox">
-                <p>AATROX</p>
+                <p>EKKO</p>
 
             </article>
             <!-- TIPS -->
