--- a/index.html
+++ b/index.html
@@ -425,10 +425,8 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>When chasing, hold on to your Charm when the enemy starts moving side to side, you can use this
+                        time instead to auto them or walk up and close up the gap.</li>
                 </ul>
 
             </article>
@@ -463,10 +461,9 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>You can R1 do dodge abilites like malphite R and Zac's jump when using it on them.</li>
+                    <li>You can go for quick trades with using E and minions. Dash forward with E1 and hit a minion,
+                        trade, then E2 to jump back.</li>
                 </ul>
 
             </article>
@@ -504,10 +501,12 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>Cancelling the second auto gives you bonus movement speed, use it to chase enemies down.</li>
+                    <li>After killing a minion, your second shot will hit the closest enemy.</li>
+                    <li>You won't get slowed while charging your R, but firing it makes you stand in place. You can time
+                        your E such that you swing during the firing animation (Throw E during R1 charging, reactivate E
+                        right before you reactivate R2)</li>
+                    <li>Casting abilities reveal you from W's stealth, but summoner spells won't.</li>
                 </ul>
 
             </article>
@@ -515,6 +514,9 @@
             <article class="segment counters">
                 <h1>Counters</h1>
                 <ul>
+                    <li>Akshan can only stay invisible when he is basically touching a wall. If he leaves the wall, he
+                        will lose the invisibility after 2 seconds.</li>
+                    <li>Control wards reveal Akshan. Place them wisely.</li>
                     <li>Respect his early burst. Akshan has great trading ability with his passive shield and double
                         autos.
                     </li>
@@ -524,6 +526,7 @@
                         avoid standing behind wave.</li>
                     <li>Akshan's ultimate gets blocked by minions, allies, jungle monsters, and towers.</li>
                     <li>Don't give him free revive resets. Fight him first or deny him resets during skirmishes.</li>
+                    <li>Hard CCs cancel his E.</li>
                 </ul>
             </article>
 
@@ -539,10 +542,13 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>Q flash does not work. You need to flash then Q.</li>
+                    <li>Use your ultimate in moments when you think you will get bursted or will be taking the most
+                        damage, not when you are low HP.</li>
+                    <li>You can Headbutt (W) people over walls, use this to temporarily remove enemies from a fight.
+                    </li>
+                    <li>Be creative with your Headbutt (W), you can use it deny enemy cannons, zoning specific enemies
+                        etc, but obviously use it carefully because it makes you vulnerable after.</li>
                 </ul>
 
             </article>
@@ -575,10 +581,10 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>You can use tiamat between during E without losing momentum.</li>
+                    <li>Your Q2 has a very long window, save it for a higher likelihood of landing it.</li>
+                    <li>If you cast Q2 immediately after you Ultimate (without clicking the ground after Ultimate), it
+                        is guaranteed to hit.</li>
                 </ul>
 
             </article>
@@ -605,10 +611,14 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>If your max E, you take no damage from minions. As a support, you can hold 20 minions for the
+                        rest of the game.</li>
+                    <li>You can Ult flash to animation cancel your Ultimate.</li>
+                    <li>You can Q onto a tank, then Ult flash their backline.</li>
+                    <li>You can flash when you are flying towards an enemy. Use this to reposition for a better Ultimate
+                        and avoid telegraphing yourself for enemy CC.</li>
+                    <li>When ganking, just force enemies to waste their movement abilities or flash. Q immediately since
+                        you also have a second Q charge.</li>
                 </ul>
 
             </article>
@@ -637,10 +647,14 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>Walls under people count as a knockup. You can stop channeling spells like Katarina or Shen
+                        ultimates and synergies with Yasuo's. You can even interrupt Pyke's Q charge up. Using it on
+                        scuttle can remove it shield if you don't have
+                        Q.</li>
+                    <li>Use Ultimate, then wall the enemies to keep them in it for longer. Hold onto your Q as your
+                        Ultimate is already making them chilled and allowing you buffed E damage.</li>
+                    <li>Zhonya's won't turn your Ultimate off.</li>
+                    <li>Wall your teammates to gain tear stacks.</li>
                 </ul>
 
             </article>
@@ -699,10 +713,7 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>Learn gun rotations on youtube.</li>
                 </ul>
 
             </article>
@@ -729,10 +740,9 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>Prioritize vision control around objectives.</li>
+                    <li>Use your R to initiate fights or pick off key
+                        targets.</li>
                 </ul>
 
             </article>
@@ -750,7 +760,7 @@
         </div>
 
 
-        <div id="aurelion sol" class="detail-container">
+        <div id="aurelionsol" class="detail-container">
             <article class="segment introduction">
                 <img src="https://static.bigbrain.gg/assets/lol/riot_static/15.8.1/img/champion/AurelionSol.png"
                     class="big-icon" alt="AurelionSol">
@@ -761,10 +771,18 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>Your Q gets interrupted by hard CC.</li>
+                    <li>Not only does your E slow, but it also executes enemies below 5% (or more due to stardust
+                        stacks). The execution does not apply to Epic monsters.</li>
+                    <li>Use W wisely. Place your W lines across terrain rather than directly on the enemy team. You W
+                        resets upon every kill so focus on 1 or 2 targets at a time.</li>
+                    <li>Your E is an amazing zoning tool. Place it in chokepoints and forget about it.</li>
+                    <li>Do not underestimate your Q damage early on. Your Q cooldown resets when you use W and after W
+                        ends. In lane, you can Q the enemy, W then Q, then continuing to Q the enemy after W ends for a
+                        potential kill. This is especially good for immobile enemies (after wasting their CC) or enemies
+                        without CC.</li>
+                    <li>If you are not confident in killing the laner, just chill and stack. You become a monster with
+                        stacks and a few items.</li>
                 </ul>
 
             </article>
@@ -825,10 +843,11 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>The biggest challenge for Azir is soldier placement. Missing a W or Q makes you lose out on a
+                        lot of damage.</li>
+                    <li>Hold your Ultimate. Don't force a Shurima Shuffle and die early in the fight, you can use it
+                        defensively. Your main source
+                        of damage is still from your soldiers.</li>
                 </ul>
 
             </article>
@@ -973,10 +992,8 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
-                    <li>This is tip 2</li>
-                    <li>This is tip 3</li>
-                    <li>This is tip 4</li>
+                    <li>Stack your passive on multiple targets with your Q to chain stuns and disrupt high-impact
+                        carries in teamfights</li>
                 </ul>
 
             </article>
