--- a/index.html
+++ b/index.html
@@ -1483,7 +1483,7 @@
             <article class="segment tips">
                 <h1>Tips</h1>
                 <ul>
-                    <li>This is tip 1</li>
+                    <li>You can hide your Ultimate animation during Q.</li>
                     <li>This is tip 2</li>
                     <li>This is tip 3</li>
                     <li>This is tip 4</li>
