--- a/index.html
+++ b/index.html
@@ -362,8 +362,11 @@
                     class="champ-icon">
                 <img src="https://static.bigbrain.gg/assets/lol/riot_static/15.8.1/img/champion/Zyra.png" alt="Zyra"
                     class="champ-icon">
+                <span id="divider"></span>
             </div>
+
         </div>
+
         <!-- CHAMPION DETAILS -->
         <div id="aatrox" class="detail-container">
             <article class="segment introduction">
